# catnote

./: LICENSE  README.md
api/: Cargo.toml
api/src/: config.rs  context.rs  err.rs  main.rs  migration_test.rs  templates.rs
api/src/graphql/v1/: schema.rs
api/src/handlers/v1/: graphiql.rs  graphql.rs  logout.rs  mod.rs  refresh_token.rs  reset_password.rs  send_vcode.rs  signin.rs  signup.rs  verify_email.rs
api/src/models/: insert_id.rs  mod.rs  note.rs  remark.rs  tag.rs  user.rs  vcode.rs
api/src/mw/: auth.rs
api/src/repos/: mod.rs  note.rs  remark.rs  tag.rs  user.rs  vcode.rs
api/src/services/: email.rs  hash.rs  jwt.rs  mod.rs
web/: README.md  package.json  tailwind.config.cjs
web/src/: App.tsx  editor.css  index.css  main.tsx  vite-env.d.ts
web/src/app/: store.ts
web/src/app/services/: auth.ts  posts.ts  todos.ts
web/src/components/: Counter.tsx  NoteCard.tsx  SearchModal.tsx  Sidebar.tsx  Todos.tsx
web/src/features/auth/: authSlice.ts
web/src/features/counter/: counterSlice.ts
web/src/hooks/: store.ts  useAuth.ts
web/src/mocks/: data.ts
web/src/routes/: 404.tsx  about.tsx  home.tsx  login.tsx  note.tsx  notes.tsx  signup.tsx
web/src/types/: index.ts
