[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = { version = "4", features = ["openssl"] }
actix-web-actors = "4.1"
actix-cors = "0.6"
openssl = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
futures = "0.3"
futures-util = "0.3"
derive_more = "0.99"
log = "0.4"
mongodb = "2.1.0"
dotenv = "0.15"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4" # Used for setting DateTimes
rand = "0.8"
anyhow = "1"
juniper = "0.15"
thiserror = "1"
env_logger = "0.9"
dataloader = "0.14"
async-trait = "0.1"
lettre = "0.10.0-rc.5"
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "8"
validator = { version = "0.14", features = ["derive"] }
